# pls

./: .gitignore  LICENSE  LOG.md  README.md  a.md  a.pl  b.pl  pyproject.toml  release.sh  report.md  requirements.txt  to_show.md
.github/workflows/: package-extension.yaml
a/: op.pl
bad/: clpb.pl
editors/neovim/: setup.lua
editors/vscode/: README.md  package-lock.json  package.json
examples/: clpfd.pl  consult.pl  go_to_definition.pl  list_map.pl  lists.pl  teste.pl  use_comment.pl  use_comment_c.pl  x.pl
examples/b/: a.pl  b.pl  c.pl  commented_prolog_cliques_distinct.pl  l.pl  (+1 more)
pls/: annotations.py  debug.py  dependency_graph.py  folding_range_visitor.py  highlight.py  main.py  markup.py  matching_signature_help.py  model.py  my_logging.py  pldoc_comment_visitor.py  prolog_visitor.py  server.py  syntax_error_visitor.py  teste.pl  the_server.py  tree_visitor.py  utils.py
prolog_examples/: arg_list.pl  arg_pldoc.pl  clause_length.pl  clpfd.pl  common_errors.pl  conventions.pl  example.pl  explicit_unification.pl  go_to_definition.pl  is_use.pl  line_length.pl  lists.pl  my_maths.pl  tab_indentation.pl  teste.pl  too_many_args.pl  use_comment.pl  wrapper_predicate.pl
scripts/: package_extension.sh
sicstus-doc-scraper/: README.md  arithmetic.md  between.md  builtins.pl  graphs.md  lists.md  logical.md  membership.md  prompt.md  requirements.txt  scheduling.md  sequence.md  statistics.md  teste.ipynb
tree-sitter-pldoc/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example  go.mod  grammar.js  ml  package-lock.json  package.json  plddoc_modifiers.html  pyproject.toml  setup.py  teste  tree-sitter.json
tree-sitter-pldoc/bindings/c/: tree-sitter-pldoc.pc.in
tree-sitter-pldoc/bindings/go/: binding.go  binding_test.go
tree-sitter-pldoc/bindings/node/: binding.cc  index.js
tree-sitter-pldoc/bindings/python/tests/: test_binding.py
tree-sitter-pldoc/bindings/python/tree_sitter_pldoc/: __init__.py  binding.c
tree-sitter-pldoc/bindings/rust/: build.rs  lib.rs
tree-sitter-pldoc/bindings/swift/TreeSitterPlDoc/: pldoc.h
tree-sitter-pldoc/bindings/swift/TreeSitterPlDocTests/: TreeSitterPlDocTests.swift
tree-sitter-pldoc/src/: grammar.json  node-types.json  parser.c
tree-sitter-prolog/: .gitignore  package-lock.json
tutorial/: main.pl
vis/: vis.py  x.pl
(+392 files in other folders)
